CIRC-2018 fix code smells